--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   	<!-- https://angular.io/docs/ts/latest/quickstart.html -->
-    <title>Maytag Laundry Products</title>
+    <title>Maytag Dishwasher Products</title>
     <link rel="stylesheet" href="./public/css/base.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,7 +43,7 @@
   <!-- 3. Display the application -->
   <body>
       <div id="container">
-        <rl-mt-laundry-landing></rl-mt-laundry-landing>
+        <rl-mt-dish-landing></rl-mt-dish-landing>
       </div>
   </body>
 
